syntax = "proto3";

package usage;

message FunctionUsageStats {
    repeated CounterWithTag storage_calls = 1;
    optional uint64 storage_ingress_size = 2;
    optional uint64 storage_egress_size = 3;
    repeated CounterWithTag database_ingress_size = 4;
    repeated CounterWithTag database_egress_size = 5;
    repeated CounterWithTag vector_ingress_size = 6;
    repeated CounterWithTag vector_egress_size = 7;
}

message CounterWithTag {
    optional string component_path = 3;
    optional string table_name = 1;
    optional uint64 count = 2;
}
